tests/record/record.exp
Error ------------------------------------------------------------------------------------------------------ test.js:4:8

Cannot assign object literal to `o1` because string [1] is incompatible with number [2] in property `bar`.
[incompatible-type]

   test.js:4:8
   4|   bar: "", // error: string ~/~ number
             ^^ [1]

References:
   test.js:2:23
   2| var o1: {[key: Key1]: number} = {
                            ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ test.js:7:1

string `qux` [1] is incompatible with enum [2]. [incompatible-type]

   test.js:7:1
   7| o1.qux; // error: qux not found
      ^^^^^^ [1]

References:
   test.js:2:16
   2| var o1: {[key: Key1]: number} = {
                     ^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:14:1

Property `qux` is missing in `R` [1]. [prop-missing]

   test.js:14:1
   14| o2.qux; // error: qux not found
       ^^^^^^

References:
   test.js:12:16
   12| var o2: {[key: Key2]: number} = { foo: 0 }; // OK to leave out bar
                      ^^^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:17:6

Deprecated utility. Using `$Subtype` types is not recommended! [deprecated-utility]

   17|   x: $Subtype<{[key: $Keys<X>]: any}>; // object with larger key set than X's
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 4 errors
